Fixed name and role for header. Got images aligned on same row.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,6 +51,23 @@ body {
 	background-color: #16a085;
 }
 
+.container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+img {
+	max-width: 100%;
+}
+.image {
+	flex-basis: 40%;
+}
+.text {
+	font-size: 20px;
+	padding-left: 20px;
+	color: white;
+}
+
 #home {
 	height: 1000px;
 	background-color: #f5f5f5;
@@ -104,21 +121,41 @@ h2 {
 #banner {
 	height: 33%;
 	background-color: #000;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 #hero {
 	padding-left: 20%;
 	padding-right: 10%;
 	height: 100%;
+	flex-basis: 40%;
 }
 
-#luca_name {
+.luca_name {
 	color: #f5f5f5;
 	float: right;
 	padding-right: 15%;
 	padding-top: 2%;
 	font-size: 70px;
 	letter-spacing: 5px;
+}
+.luca_name2 {
+	color: #f5f5f5;
+	float: top;
+	padding-right: 15%;
+	padding-top: 2%;
+	font-size: 10px;
+	letter-spacing: 5px;
+}
+
+#tagline {
+	color: #f5f5f5;
+	/* padding-right: 15%;
+	padding-top: 2%; */
+	font-size: 10px;
+	/* letter-spacing: 5px; */
 }
 
 .column {
